--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
 </body>
-<script type="text/javascript" src="../dist/bundle.js"></script>
+<script type="text/javascript" src="../dist/main.js"></script>
 </html>
